--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -5822,7 +5822,7 @@ msgstr "Registro múltiple"
 msgid "Full-text search feature"
 msgstr "Funcionalidad de búsqueda de texto completo"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Seleccione \"Sí\" para habilitar esta funcionalidad. Esta utilidad depende de la extensión Xapian para PHP, por lo que no funcionará si esta extensión no está instalada en su servidor, como mínimo la versión 1.x"
 
 msgid "Find a training session"
@@ -19396,31 +19396,31 @@ msgstr "<p>En primer lugar, usted tiene que crear una Aplicación Facebook (ver 
 msgid "Announcement for a group"
 msgstr "Anuncios para un grupo"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Prioridad del idioma 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Prioridad del idioma 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Prioridad del idioma 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Prioridad del idioma 4"
 
 msgid "Language priority 5"
 msgstr "Prioridad del idioma 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "El idioma con la más alta prioridad"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "Prioridad del idioma 2"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "Prioridad del idioma 3"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "Prioridad del idioma 4"
 
 msgid "The lowest language priority"
@@ -20071,7 +20071,7 @@ msgstr "Al activar esta opción, aparecerá un indicador de complejidad de contr
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "Al activar esta opción, aparecerá un CAPTCHA en el formulario de ingreso, para evitar los intentos de ingreso por fuerza bruta"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20146,8 +20146,8 @@ msgstr "Cantidad por defecto de días posteriores a la fecha de fin de la sesió
 msgid "PDF header logo"
 msgstr "Logo de cabecera PDF"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
-msgstr "Activar para usar la imagen en css/themes/[su-css]/images/pdf_logo_header.png como el logo de cabecera de todas las exportaciones en formato PDF (en vez del logo normal del portal)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgstr "Activar para usar la imagen en var/themes/[su-css]/images/pdf_logo_header.png como el logo de cabecera de todas las exportaciones en formato PDF (en vez del logo normal del portal)"
 
 msgid "Order users by official code"
 msgstr "Ordenar usuarios por código oficial"
@@ -21097,7 +21097,7 @@ msgstr "Enviar notificaciones Push a través de Firebase Console de Google"
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "ID del remitente de Firebase Console para Mensajería en la Nube"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr "Necesita registrar un proyecto en <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
 
 msgid "Server key of Firebase Console for Cloud Messaging"
@@ -27271,7 +27271,7 @@ msgstr ""
 "Ocultar el icono de porcentaje en la indicación de 'Promedio de ejercicios "
 "en lecciones' en el seguimiento de alumnos"
 
-msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it."
+msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it.<br><pre> [ 'stream_context_create' => [ 'http' => [ 'proxy' => 'tcp://example.com:8080', 'request_fulluri' => true ] ], 'curl_setopt_array' => [ 'CURLOPT_PROXY' => 'http://example.com', 'CURLOPT_PROXYPORT' => '8080' ] ] </pre>"
 msgstr ""
 "Algunas características de Chamilo se conectarán al exterior desde el "
 "servidor. Por ejemplo, para asegurarse de que un contenido externo existe al "
@@ -27332,7 +27332,7 @@ msgstr ""
 "Permitir el intercambio de mensajes de tutores/jefes sobre un alumno desde "
 "la página de seguimiento de ese usuario."
 
-msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500]."
+msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500].<br><pre> ['options' => [50, 100, 200, 500]] </pre>"
 msgstr ""
 "Establezca las opciones que desea que aparezcan en la navegación alrededor "
 "de una tabla para mostrar menos o más filas en una página. Ej. [50, 100, "
@@ -27379,7 +27379,7 @@ msgstr ""
 msgid "Like/Dislike for social posts"
 msgstr "Me gusta/No me gusta para publicaciones sociales"
 
-msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video."
+msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video.<br><pre> ['features' => ['speed']] </pre>"
 msgstr ""
 "Array de características adicionales que puede habilitar para el reproductor "
 "de video en Chamilo. Las opciones incluyen 'speed', que le permite cambiar "
@@ -27454,12 +27454,12 @@ msgstr "Utilizar el ID de carrera externo en diagramas"
 msgid "Hide 'never expires' option for users"
 msgstr "Ocultar la opción 'nunca caduca' para usuarios"
 
-msgid "Enable to use an array to define which roles should be clearly displayed and which should be hidden."
+msgid "An array of role => true/false that defines whether that role should be shown or hidden.<br><pre> [ 'COURSEMANAGER' => true, 'STUDENT' => true, 'DRH' => false, 'SESSIONADMIN' => false, 'STUDENT_BOSS' => false, 'INVITEE' => false ] </pre>"
 msgstr ""
 "Habilitar el uso de un arreglo para definir qué roles deben mostrarse "
 "claramente y cuáles deben ocultarse."
 
-msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role."
+msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role.<br><pre> [ 'COURSEMANAGER' => 365, 'STUDENT' => 31, 'DRH' => 31, 'SESSIONADMIN' => 60, 'STUDENT_BOSS' => 60, 'INVITEE' => 31 ] </pre>"
 msgstr ""
 "Un arreglo de rol => número que representa la cantidad de días que tiene una "
 "cuenta antes de la expiración, dependiendo del rol."
@@ -27504,7 +27504,7 @@ msgstr "Ocultar ruta de navegación si 'no permitido'"
 msgid "URL for alternative platform logo"
 msgstr "URL para el logotipo alternativo de la plataforma"
 
-msgid "Array defining host and port for the LDAP server."
+msgid "Array defining host and port for the LDAP server.<br><pre> ['host' => '', 'port' => ''] </pre>"
 msgstr "Array que define el host y el puerto para el servidor LDAP."
 
 msgid "Enable edition of course work time"
@@ -27519,7 +27519,7 @@ msgstr "Días de expiración predeterminados por rol"
 msgid "LDAP connection configuration"
 msgstr "Configuración de conexión LDAP"
 
-msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in."
+msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in.<br><pre> [ 'days' => 0, 'months' => 0, ] </pre>"
 msgstr ""
 "Array que define los días ('days') y meses ('months') para establecer la "
 "fecha de expiración de la cuenta cuando el usuario se conecte por primera "
