--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -5869,7 +5869,7 @@ msgstr "Mehrfach-Anmeldung"
 msgid "Full-text search feature"
 msgstr "Volltextsuche"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr ", um dieses Feature zu aktivieren. Diese Erweiterung ist abhängig von der Xapian Erweiterung für PHP und wird nur dann funktionieren, wenn Xapain zumindest in Version 1.x auf ihrem Server installiert ist."
 
 msgid "Find a training session"
@@ -19426,31 +19426,31 @@ msgstr "Zuerst muß eine Facebook Anwendung erstellt werden (siehe hierzu <a hre
 msgid "Announcement for a group"
 msgstr "Ankündigung für eine Gruppe"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Priorität der Sprachwahl"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Sprachpriorität 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Sprachpriorität 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Sprachpriorität 4"
 
 msgid "Language priority 5"
 msgstr "Sprachpriorität 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "Die Sprache mit der höchsten Priorität"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "Sprachwahl mit zweithöchster Priorität"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "Diese Sprache greift an dritter Stelle"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "Vierte Sprachpriorität"
 
 msgid "The lowest language priority"
@@ -20101,7 +20101,7 @@ msgstr "Aktivieren Sie diese Option, um eine visuelle Anzeige der Kennwortstärk
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "Eine CAPTCHA auf dem Login-Formular aktivieren, um Passwort-Hammering zu vermeiden"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20176,8 +20176,8 @@ msgstr "Standardanzahl der Tage, die ein Trainer nach dem offiziellen Endtermin 
 msgid "PDF header logo"
 msgstr "PDF-Header-Logo"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
-msgstr "Ob das Bild bei css/themes/[your-css]/images/pdf_logo_header.png als PDF-Header-Logo für alle PDF-Exporte verwendet werden soll (anstelle des normalen Portal Logos)."
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgstr "Ob das Bild bei var/themes/[your-css]/images/pdf_logo_header.png als PDF-Header-Logo für alle PDF-Exporte verwendet werden soll (anstelle des normalen Portal Logos)."
 
 msgid "Order users by official code"
 msgstr "Benutzer nach offiziellem Code auflisten"
@@ -21127,7 +21127,7 @@ msgstr "Push-Benachrichtigungen von Googles Firebase Konsole senden"
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "Sender-ID der Firebase-Konsole für Cloud Messaging"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr "Sie müssen ein Projekt auf der Google Firebase Konsoleregistrieren"
 
 msgid "Server key of Firebase Console for Cloud Messaging"
@@ -26827,7 +26827,7 @@ msgstr "Senden Sie 2 Registrierungs-E-Mails"
 msgid "Only show matching courses in catalogue"
 msgstr "Zeigen Sie nur passende Kurse im Katalog an"
 
-msgid "Enable to use an array to define which roles should be clearly displayed and which should be hidden."
+msgid "An array of role => true/false that defines whether that role should be shown or hidden.<br><pre> [ 'COURSEMANAGER' => true, 'STUDENT' => true, 'DRH' => false, 'SESSIONADMIN' => false, 'STUDENT_BOSS' => false, 'INVITEE' => false ] </pre>"
 msgstr ""
 "Aktivieren Sie die Verwendung eines Arrays, um zu definieren, welche Rollen "
 "deutlich angezeigt und welche versteckt werden sollen."
@@ -26870,7 +26870,7 @@ msgstr ""
 "wenn der Lernende für den entsprechenden Lernpfad eingeschrieben ist und "
 "Zugang dazu hat."
 
-msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role."
+msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role.<br><pre> [ 'COURSEMANAGER' => 365, 'STUDENT' => 31, 'DRH' => 31, 'SESSIONADMIN' => 60, 'STUDENT_BOSS' => 60, 'INVITEE' => 31 ] </pre>"
 msgstr ""
 "Ein Array von Rolle => Anzahl, das die Anzahl der Tage bis zum Ablauf eines "
 "Kontos in Abhängigkeit von der Rolle darstellt."
@@ -27581,7 +27581,7 @@ msgstr ""
 msgid "Enable only if you are using the Redirection plugin"
 msgstr "Aktivieren Sie dies nur, wenn Sie das Redirection-Plugin verwenden"
 
-msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it."
+msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it.<br><pre> [ 'stream_context_create' => [ 'http' => [ 'proxy' => 'tcp://example.com:8080', 'request_fulluri' => true ] ], 'curl_setopt_array' => [ 'CURLOPT_PROXY' => 'http://example.com', 'CURLOPT_PROXYPORT' => '8080' ] ] </pre>"
 msgstr ""
 "Einige Funktionen von Chamilo stellen eine Verbindung nach außen vom Server "
 "her. Zum Beispiel, um sicherzustellen, dass ein externer Inhalt existiert, "
@@ -27853,7 +27853,7 @@ msgstr ""
 "Aktivieren Sie diese Option, um Lernenden das Herunterladen der Lernpfade "
 "als SCORM-Pakete zu ermöglichen."
 
-msgid "Array defining host and port for the LDAP server."
+msgid "Array defining host and port for the LDAP server.<br><pre> ['host' => '', 'port' => ''] </pre>"
 msgstr "Array zur Definition von Host und Port für den LDAP-Server."
 
 msgid "Put some of the large calculations of averages in cached fields for the links and evaluations to increase speed (considerably). The potential negative impact is that it can take some time to refresh the gradebook results tables."
@@ -27870,7 +27870,7 @@ msgstr "Mehrere anonyme Benutzer"
 msgid "Enable edition of course work time"
 msgstr "Aktivierung der Bearbeitung der Kursarbeitszeit"
 
-msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500]."
+msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500].<br><pre> ['options' => [50, 100, 200, 500]] </pre>"
 msgstr ""
 "Legen Sie die Optionen fest, die in der Navigation um eine Tabelle herum "
 "erscheinen sollen, um weniger oder mehr Zeilen auf einer Seite anzuzeigen. "
@@ -28137,7 +28137,7 @@ msgstr "Security Referrer Policy"
 msgid "Enable X-sendfile headers"
 msgstr "Aktivieren Sie X-Sendfile-Header"
 
-msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video."
+msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video.<br><pre> ['features' => ['speed']] </pre>"
 msgstr ""
 "Array zusätzlicher Funktionen, die Sie für den Videoplayer in Chamilo "
 "aktivieren können. Zu den Optionen gehört 'Geschwindigkeit', mit der Sie die "
@@ -28206,7 +28206,7 @@ msgstr ""
 "Lernpfade-Sichtbarkeitsinformationen auf der Nachverfolgungsseite des "
 "Lernenden hinzufügen"
 
-msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in."
+msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in.<br><pre> [ 'days' => 0, 'months' => 0, ] </pre>"
 msgstr ""
 "Array, der die 'Tage' und 'Monate' definiert, um das Ablaufdatum des Kontos "
 "festzulegen, wenn der Benutzer sich zum ersten Mal anmeldet."
