--- a/translations/messages.el.po
+++ b/translations/messages.el.po
@@ -5817,7 +5817,7 @@ msgstr "Πολλαπλή εγγραφή"
 msgid "Full-text search feature"
 msgstr "Full-text search feature"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 
 msgid "Find a training session"
@@ -19374,31 +19374,31 @@ msgstr "<p>First of all, you have create a Facebook Application (see <a href='ht
 msgid "Announcement for a group"
 msgstr "Ανακοίνωση για μια Ομάδα"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Language priority 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Language priority 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Language priority 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Language priority 4"
 
 msgid "Language priority 5"
 msgstr "Language priority 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "The language with the highest priority"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "The second language priority"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "The third language priority"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "The fourth language priority"
 
 msgid "The lowest language priority"
@@ -20049,7 +20049,7 @@ msgstr "Ενεργοποιήστε αυτή την επιλογή για να π
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "Ενεργοποίηση CAPTCHA στην φόρμα σύνδεσης, για προστασία του password"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20124,7 +20124,7 @@ msgstr ""
 msgid "PDF header logo"
 msgstr ""
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 msgstr ""
 
 msgid "Order users by official code"
@@ -21075,7 +21075,7 @@ msgstr ""
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr ""
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr ""
 
 msgid "Server key of Firebase Console for Cloud Messaging"
