--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -5813,8 +5813,8 @@ msgstr "Multiple registration"
 msgid "Full-text search feature"
 msgstr "Full-text search feature"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
-msgstr "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgstr "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 
 msgid "Find a training session"
 msgstr "Find a training session"
@@ -6802,6 +6802,9 @@ msgstr "Group deleted"
 
 msgid "Registered"
 msgstr "Registered"
+
+msgid "registered"
+msgstr "registered"
 
 msgid "Learners are allowed to self-register in groups"
 msgstr "Learners are allowed to self-register in groups"
@@ -19370,32 +19373,32 @@ msgstr "<p><h5>Create your Facebook Application</h5>First of all, you have to cr
 msgid "Announcement for a group"
 msgstr "Announcement for a group"
 
-msgid "Language priority 1"
-msgstr "Language priority 1"
+msgid "Highest priority language"
+msgstr "Highest priority language"
 
-msgid "Language priority 2"
-msgstr "Language priority 2"
+msgid "Secondary priority language"
+msgstr "Secondary priority language"
 
-msgid "Language priority 3"
-msgstr "Language priority 3"
+msgid "Third priority language"
+msgstr "Third priority language"
 
-msgid "Language priority 4"
-msgstr "Language priority 4"
+msgid "Fourth priority language"
+msgstr "Fourth priority language"
 
 msgid "Language priority 5"
 msgstr "Language priority 5"
 
-msgid "The language with the highest priority"
-msgstr "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
+msgstr "Primary language selected when multiple language contexts are set."
 
-msgid "The second language priority"
-msgstr "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
+msgstr "Secondary fallback language if first priority is unavailable or out of context."
 
-msgid "The third language priority"
-msgstr "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
+msgstr "Tertiary language fallback if higher priorities fail."
 
-msgid "The fourth language priority"
-msgstr "The fourth language priority"
+msgid "Last language fallback option by order of priority."
+msgstr "Last language fallback option by order of priority."
 
 msgid "The lowest language priority"
 msgstr "The lowest language priority"
@@ -20045,8 +20048,8 @@ msgstr "Enable this option to add a visual indicator of password strength, when 
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
-msgstr "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
+msgstr "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 
 msgid "CAPTCHA mistakes allowance"
 msgstr "CAPTCHA mistakes allowance"
@@ -20120,8 +20123,8 @@ msgstr "Default number of days a coach can access his session after the official
 msgid "PDF header logo"
 msgstr "PDF header logo"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
-msgstr "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgstr "Whether to use the image at var/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 
 msgid "Order users by official code"
 msgstr "Order users by official code"
@@ -21071,8 +21074,8 @@ msgstr "Send Push Notifications by Google's Firebase Console"
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "Sender ID of Firebase Console for Cloud Messaging"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
-msgstr "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
+msgstr "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 
 msgid "Server key of Firebase Console for Cloud Messaging"
 msgstr "Server key of Firebase Console for Cloud Messaging"
@@ -26681,20 +26684,20 @@ msgstr "Minimal time increment (in minutes) when selecting a date and time with 
 msgid "Proxy settings"
 msgstr "Proxy settings"
 
-msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it."
-msgstr "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it."
+msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it.<br><pre> [ 'stream_context_create' => [ 'http' => [ 'proxy' => 'tcp://example.com:8080', 'request_fulluri' => true ] ], 'curl_setopt_array' => [ 'CURLOPT_PROXY' => 'http://example.com', 'CURLOPT_PROXYPORT' => '8080' ] ] </pre>"
+msgstr "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it.<br><pre> [ 'stream_context_create' => [ 'http' => [ 'proxy' => 'tcp://example.com:8080', 'request_fulluri' => true ] ], 'curl_setopt_array' => [ 'CURLOPT_PROXY' => 'http://example.com', 'CURLOPT_PROXYPORT' => '8080' ] ] </pre>"
 
 msgid "Video features"
 msgstr "Video features"
 
-msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video."
-msgstr "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video."
+msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video.<br><pre> ['features' => ['speed']] </pre>"
+msgstr "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video.<br><pre> ['features' => ['speed']] </pre>"
 
 msgid "Default offered pagination numbers in tables"
 msgstr "Default offered pagination numbers in tables"
 
-msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500]."
-msgstr "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500]."
+msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500].<br><pre> ['options' => [50, 100, 200, 500]] </pre>"
+msgstr "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500].<br><pre> ['options' => [50, 100, 200, 500]] </pre>"
 
 msgid "Webservices return user field"
 msgstr "Webservices return user field"
@@ -26729,20 +26732,20 @@ msgstr "If the user is not allowed to access a specific page, also hide the brea
 msgid "LDAP connection configuration"
 msgstr "LDAP connection configuration"
 
-msgid "Array defining host and port for the LDAP server."
-msgstr "Array defining host and port for the LDAP server."
+msgid "Array defining host and port for the LDAP server.<br><pre> ['host' => '', 'port' => ''] </pre>"
+msgstr "Array defining host and port for the LDAP server.<br><pre> ['host' => '', 'port' => ''] </pre>"
 
 msgid "Set expiration date on first login"
 msgstr "Set expiration date on first login"
 
-msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in."
-msgstr "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in."
+msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in.<br><pre> [ 'days' => 0, 'months' => 0, ] </pre>"
+msgstr "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in.<br><pre> [ 'days' => 0, 'months' => 0, ] </pre>"
 
 msgid "Selective display of roles"
 msgstr "Selective display of roles"
 
-msgid "Enable to use an array to define which roles should be clearly displayed and which should be hidden."
-msgstr "Enable to use an array to define which roles should be clearly displayed and which should be hidden."
+msgid "An array of role => true/false that defines whether that role should be shown or hidden.<br><pre> [ 'COURSEMANAGER' => true, 'STUDENT' => true, 'DRH' => false, 'SESSIONADMIN' => false, 'STUDENT_BOSS' => false, 'INVITEE' => false ] </pre>"
+msgstr "An array of role => true/false that defines whether that role should be shown or hidden.<br><pre> [ 'COURSEMANAGER' => true, 'STUDENT' => true, 'DRH' => false, 'SESSIONADMIN' => false, 'STUDENT_BOSS' => false, 'INVITEE' => false ] </pre>"
 
 msgid "Roles display options"
 msgstr "Roles display options"
@@ -26753,8 +26756,8 @@ msgstr "An array of role => true/false that defines whether that role should be 
 msgid "Default expiration days by role"
 msgstr "Default expiration days by role"
 
-msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role."
-msgstr "An array of role = > number which represents the number of days an account has before expiration, depending on the role."
+msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role.<br><pre> [ 'COURSEMANAGER' => 365, 'STUDENT' => 31, 'DRH' => 31, 'SESSIONADMIN' => 60, 'STUDENT_BOSS' => 60, 'INVITEE' => 31 ] </pre>"
+msgstr "An array of role = > number which represents the number of days an account has before expiration, depending on the role.<br><pre> [ 'COURSEMANAGER' => 365, 'STUDENT' => 31, 'DRH' => 31, 'SESSIONADMIN' => 60, 'STUDENT_BOSS' => 60, 'INVITEE' => 31 ] </pre>"
 
 msgid "Set an extra field as trigger for registration as ex-learner"
 msgstr "Set an extra field as trigger for registration as ex-learner"
@@ -28114,3 +28117,201 @@ msgstr "Show courses duration"
 
 msgid "Display the course duration next to the course title in the course catalogue and the courses list."
 msgstr "Display the course duration next to the course title in the course catalogue and the courses list."
+
+msgid "Display colors for scores in the gradebook"
+msgstr "Display colors for scores in the gradebook"
+
+msgid "Enables color coding for better score visibility in the gradebook."
+msgstr "Enables color coding for better score visibility in the gradebook."
+
+msgid "Default platform language"
+msgstr "Default platform language"
+
+msgid "Main language, used by default when no user language is set."
+msgstr "Main language, used by default when no user language is set."
+
+msgid "Unlock prerequisites after last test attempt"
+msgstr "Unlock prerequisites after last test attempt"
+
+msgid "Allows users to continue in a learning path after using all quiz attempts of a test used as prerequisite for other items."
+msgstr "Allows users to continue in a learning path after using all quiz attempts of a test used as prerequisite for other items."
+
+msgid "Send all e-mails as one single sender"
+msgstr "Send all e-mails as one single sender"
+
+msgid "Overrides sender for all emails to appear from a unique address."
+msgstr "Overrides sender for all emails to appear from a unique address."
+
+msgid "Send all e-mails from this e-mail address"
+msgstr "Send all e-mails from this e-mail address"
+
+msgid "Sets the default email address used in the \"from\" field of emails."
+msgstr "Sets the default email address used in the \"from\" field of emails."
+
+msgid "Send all e-mails as originating from this (organizational) name"
+msgstr "Send all e-mails as originating from this (organizational) name"
+
+msgid "Sets the default display name used for sending platform emails. e.g. \"Support team\"."
+msgstr "Sets the default display name used for sending platform emails. e.g. \"Support team\"."
+
+msgid "Current version of the database schema used by Chamilo"
+msgstr "Current version of the database schema used by Chamilo"
+
+msgid "Displays the current DB version to match the Chamilo core version."
+msgstr "Displays the current DB version to match the Chamilo core version."
+
+msgid "Enable the notification tool for a more impactful communication channel with students"
+msgstr "Enable the notification tool for a more impactful communication channel with students"
+
+msgid "Activates popup or system notifications for important platform events."
+msgstr "Activates popup or system notifications for important platform events."
+
+msgid "List of visible fields in profile"
+msgstr "List of visible fields in profile"
+
+msgid "Controls which profile fields are visible to users and others."
+msgstr "Controls which profile fields are visible to users and others."
+
+msgid "Minimal password syntax requirements"
+msgstr "Minimal password syntax requirements"
+
+msgid "Defines the required structure for user passwords."
+msgstr "Defines the required structure for user passwords."
+
+msgid "Filter users that can be seen as online"
+msgstr "Filter users that can be seen as online"
+
+msgid "Limits online user visibility to specific user roles."
+msgstr "Limits online user visibility to specific user roles."
+
+msgid "Auto-provision more anonymous users"
+msgstr "Auto-provision more anonymous users"
+
+msgid "Dynamically creates new anonymous users to support high visitor traffic."
+msgstr "Dynamically creates new anonymous users to support high visitor traffic."
+
+msgid "Access to personal file for all"
+msgstr "Access to personal file for all"
+
+msgid "Allows all users to access, view, and manage their personal files within the system."
+msgstr "Allows all users to access, view, and manage their personal files within the system."
+
+msgid "Enable the copy of session-specific content to another session"
+msgstr "Enable the copy of session-specific content to another session"
+
+msgid "Allows duplication of resources that were created in the session when duplicating the session."
+msgstr "Allows duplication of resources that were created in the session when duplicating the session."
+
+msgid "Enable Automatic Reinscription"
+msgstr "Enable automatic re-subscription"
+
+msgid "Enable or disable automatic re-subscription when course validity expires. The related cron job must also be activated."
+msgstr "Enable or disable automatic re-subscription when course validity expires. The related cron job must also be activated."
+
+msgid "Enable Session Replication"
+msgstr "Enable session replication"
+
+msgid "Enable or disable automatic session replication. The related cron job must also be activated."
+msgstr "Enable or disable automatic session replication. The related cron job must also be activated."
+
+msgid "Assigning skills to user: sub-skills auto-loading"
+msgstr "Assigning skills to user: sub-skills auto-loading"
+
+msgid "When manually assigning skills to a user, the form can be set to automatically offer you to assign a sub-skill instead of the skill you selected."
+msgstr "When manually assigning skills to a user, the form can be set to automatically offer you to assign a sub-skill instead of the skill you selected."
+
+msgid "Hide groups block in social network"
+msgstr "Hide groups block in social network"
+
+msgid "Removes the groups section from the social network view."
+msgstr "Removes the groups section from the social network view."
+
+msgid "Enable the AI helper tool"
+msgstr "Enable the AI helper tool"
+
+msgid "Enables all available AI-powered features in the platform."
+msgstr "Enables all available AI-powered features in the platform."
+
+msgid "AI providers connection data"
+msgstr "AI providers connection data"
+
+msgid "Configuration data to connect with external AI services."
+msgstr "Configuration data to connect with external AI services."
+
+msgid "Learning paths generator"
+msgstr "Learning paths generator"
+
+msgid "Generates personalized learning paths using AI suggestions."
+msgstr "Generates personalized learning paths using AI suggestions."
+
+msgid "Exercise generator"
+msgstr "Exercise generator"
+
+msgid "Generates personalized tests with AI based on course content."
+msgstr "Generates personalized tests with AI based on course content."
+
+msgid "Open answers grader"
+msgstr "Open answers grader"
+
+msgid "Automatically grades open-ended answers using AI."
+msgstr "Automatically grades open-ended answers using AI."
+
+msgid "Tutor chatbot energized by AI"
+msgstr "Tutor chatbot powered by AI"
+
+msgid "Provides students with an AI-powered tutoring assistant."
+msgstr "Provides students with an AI-powered tutoring assistant."
+
+msgid "Assignments grader"
+msgstr "Assignments grader"
+
+msgid "Uses AI to evaluate and grade uploaded assignments."
+msgstr "Uses AI to evaluate and grade uploaded assignments."
+
+msgid "Content analyser"
+msgstr "Content analyser"
+
+msgid "Analyses learning materials to extract insights or improve quality."
+msgstr "Analyses learning materials to extract insights or improve quality."
+
+msgid "Image generator"
+msgstr "Image generator"
+
+msgid "Generates images based on prompts or content using AI."
+msgstr "Generates images based on prompts or content using AI."
+
+msgid "Menucampushomepage"
+msgstr "Campus homepage"
+
+msgid "Menumycourses"
+msgstr "My courses"
+
+msgid "Menureporting"
+msgstr "Reporting"
+
+msgid "Menuplatformadministration"
+msgstr "Platform administration"
+
+msgid "Menumyagenda"
+msgstr "My agenda"
+
+msgid "Menusocial"
+msgstr "Social"
+
+msgid "Menuvideoconference"
+msgstr "Videoconference"
+
+msgid "Menudiagnostics"
+msgstr "Diagnostics"
+
+msgid "Menucatalogue"
+msgstr "Courses/sessions catalogue"
+
+msgid "Topbarcertificate"
+msgstr "Topbar certificates"
+
+msgid "Topbarskills"
+msgstr "Topbar skills"
+
+msgid "Ai_helpers"
+msgstr "AI helpers"
