--- a/translations/messages.gl_ES.po
+++ b/translations/messages.gl_ES.po
@@ -5817,7 +5817,7 @@ msgstr "Rexistro múltiple"
 msgid "Full-text search feature"
 msgstr "Funcionalidade de procura de texto completo"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Seleccione \"Si\" para habilitar esta funcionalidade. Esta utilidade depende da extensión Xapian para PHP, polo que non funcionará se esta extensión non está instalada no seu servidor, como mínimo a versión 1.x"
 
 msgid "Find a training session"
@@ -19374,31 +19374,31 @@ msgstr "En primeiro lugar, tense que crear unha aplicación de Facebook (ver htt
 msgid "Announcement for a group"
 msgstr "Anuncio para un grupo"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Prioridade do idioma 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Prioridade do idioma 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Prioridade do idioma 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Prioridade do idioma 4"
 
 msgid "Language priority 5"
 msgstr "Prioridade do idioma 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "O idioma coa prioridade máis alta"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "Prioridade do idioma 2"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "Prioridade do idioma 3"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "Prioridade do idioma 4"
 
 msgid "The lowest language priority"
@@ -20049,7 +20049,7 @@ msgstr "Ao activar esta opción, aparecerá un indicador de complexidade de cont
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "Ao activar esta opción, aparecerá un CAPTCHA no formulario de ingreso, para evitar os intentos de ingreso por forza bruta"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20124,8 +20124,8 @@ msgstr "Cantidade por defecto de días posteriores á data de fin da sesión, du
 msgid "PDF header logo"
 msgstr "Logo de cabeceria PDF"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
-msgstr "Activar para usar a imaxe en css/themes/[sucss]/images/pdf_logo_header.png como o logo de cabeceira de todas as exportacións en formato PDF (en vez do logo normal do portal)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgstr "Activar para usar a imaxe en var/themes/[sucss]/images/pdf_logo_header.png como o logo de cabeceira de todas as exportacións en formato PDF (en vez do logo normal do portal)"
 
 msgid "Order users by official code"
 msgstr "Ordenar usuarios por código oficial"
@@ -21075,7 +21075,7 @@ msgstr ""
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr ""
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr ""
 
 msgid "Server key of Firebase Console for Cloud Messaging"
