--- a/translations/messages.he.po
+++ b/translations/messages.he.po
@@ -5818,7 +5818,7 @@ msgstr "רישום מרובה"
 msgid "Full-text search feature"
 msgstr "תכונת חיפוש בטקסט מלא"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "בחר \"כן\" כדי להפעיל תכונה זו. זה תלוי מאוד בתוסף Xapian עבור PHP, כך שזה לא יעבוד אם הרחבה זו לא מותקנת בשרת שלך, בגרסה 1.x לכל הפחות."
 
 msgid "Find a training session"
@@ -19375,31 +19375,31 @@ msgstr ""
 msgid "Announcement for a group"
 msgstr ""
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr ""
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr ""
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr ""
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr ""
 
 msgid "Language priority 5"
 msgstr ""
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr ""
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr ""
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr ""
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr ""
 
 msgid "The lowest language priority"
@@ -20050,7 +20050,7 @@ msgstr "הפעל אפשרות זו כדי להוסיף אינדיקטור חזו
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "הפעל CAPTCHA בטופס הכניסה כדי למנוע פטיש סיסמה"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20125,8 +20125,8 @@ msgstr "מספר הימים המוגדרים כברירת מחדל שמאמן י
 msgid "PDF header logo"
 msgstr "לוגו כותרת PDF"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
-msgstr "האם להשתמש בתמונה ב-css/themes/[your-css]/images/pdf_logo_header.png בתור לוגו כותרת PDF עבור כל ייצוא PDF (במקום לוגו הפורטל הרגיל)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgstr "האם להשתמש בתמונה ב-var/themes/[your-css]/images/pdf_logo_header.png בתור לוגו כותרת PDF עבור כל ייצוא PDF (במקום לוגו הפורטל הרגיל)"
 
 msgid "Order users by official code"
 msgstr "הזמנת משתמשים לפי קוד רשמי"
@@ -21076,7 +21076,7 @@ msgstr "שלח הודעות דחיפה על ידי קונסולת Firebase של 
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "מזהה השולח של מסוף Firebase להעברת הודעות בענן"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr "עליך לרשום פרויקט ב-<a href=\"https://console.firebase.google.com/\">מסוף Google Firebase</a>"
 
 msgid "Server key of Firebase Console for Cloud Messaging"
