--- a/translations/messages.ja.po
+++ b/translations/messages.ja.po
@@ -5880,7 +5880,7 @@ msgstr ""
 msgid "Full-text search feature"
 msgstr ""
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr ""
 
 msgid "Find a training session"
@@ -19437,31 +19437,31 @@ msgstr ""
 msgid "Announcement for a group"
 msgstr ""
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "言語の優先度 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "言語の優先度 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "言語の優先度 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "言語の優先度 4"
 
 msgid "Language priority 5"
 msgstr ""
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "優先度の最も高い言語です"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "2 番目の優先度の言語です"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "3 番目の優先度の言語です"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "4 番目の優先度の言語です"
 
 msgid "The lowest language priority"
@@ -20112,7 +20112,7 @@ msgstr ""
 msgid "CAPTCHA"
 msgstr ""
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr ""
 
 msgid "CAPTCHA mistakes allowance"
@@ -20187,7 +20187,7 @@ msgstr ""
 msgid "PDF header logo"
 msgstr ""
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 msgstr ""
 
 msgid "Order users by official code"
@@ -21138,7 +21138,7 @@ msgstr ""
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr ""
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr ""
 
 msgid "Server key of Firebase Console for Cloud Messaging"
