--- a/translations/messages.nl.po
+++ b/translations/messages.nl.po
@@ -5843,7 +5843,7 @@ msgstr "Meerdere registraties"
 msgid "Full-text search feature"
 msgstr "Volledige zoekfunctionaliteit"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Kies \"Ja\" om deze functionaliteit te activeren. Het vereist de Xapian extensie voor PHP waardoor deze functionaliteit niet zal werken als deze niet geïnstalleerd is op uw server. De Xapian extensie voor PHP moet minimaal versie 1.x zijn."
 
 msgid "Find a training session"
@@ -19589,31 +19589,31 @@ msgstr ""
 msgid "Announcement for a group"
 msgstr "Aankondiging voor een groep"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Taalprioriteit 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Taalprioriteit 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Taalprioriteit 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Taalprioriteit 4"
 
 msgid "Language priority 5"
 msgstr "Taalprioriteit 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "De taal met de hoogste prioriteit"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "De tweede taalprioriteit"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "De derde taalprioriteit"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "De vierde taalprioriteit"
 
 msgid "The lowest language priority"
@@ -20338,7 +20338,7 @@ msgstr ""
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr ""
 "Activeer een CAPTCHA op het inlogformulier om wachtwoordhammering te "
 "voorkomen"
@@ -20440,9 +20440,9 @@ msgstr ""
 msgid "PDF header logo"
 msgstr "PDF-koplogo"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 msgstr ""
-"Of u de afbeelding op css/themes/[your-css]/images/pdf_logo_header.png wilt "
+"Of u de afbeelding op var/themes/[your-css]/images/pdf_logo_header.png wilt "
 "gebruiken als het PDF-koplogo voor alle PDF-exporten (in plaats van het "
 "normale portaallogo)"
 
@@ -21564,7 +21564,7 @@ msgstr "Stuur pushmeldingen via Google's Firebase Console"
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "Afzender-ID van Firebase Console voor Cloud Messaging"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr ""
 "U moet een project registreren op <a href=\"https://console.firebase.google."
 "com/\">Google Firebase Console</a>"
@@ -27717,7 +27717,7 @@ msgstr "Verstuur 2 registratie-e-mails"
 msgid "Prevent teacher from modifying assignment scores"
 msgstr "Voorkom dat de trainer de scores van opdrachten wijzigt"
 
-msgid "Enable to use an array to define which roles should be clearly displayed and which should be hidden."
+msgid "An array of role => true/false that defines whether that role should be shown or hidden.<br><pre> [ 'COURSEMANAGER' => true, 'STUDENT' => true, 'DRH' => false, 'SESSIONADMIN' => false, 'STUDENT_BOSS' => false, 'INVITEE' => false ] </pre>"
 msgstr ""
 "Stel in om een array te gebruiken om te definiëren welke rollen duidelijk "
 "weergegeven moeten worden en welke verborgen moeten blijven."
@@ -27766,7 +27766,7 @@ msgstr ""
 "Dit voegt een 'ontgrendeld' kolom toe aan de lijst met leerpaden als de "
 "leerling is ingeschreven voor de betreffende leerpad en er toegang toe heeft."
 
-msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role."
+msgid "An array of role = > number which represents the number of days an account has before expiration, depending on the role.<br><pre> [ 'COURSEMANAGER' => 365, 'STUDENT' => 31, 'DRH' => 31, 'SESSIONADMIN' => 60, 'STUDENT_BOSS' => 60, 'INVITEE' => 31 ] </pre>"
 msgstr ""
 "Een reeks van rol => aantal die het aantal dagen weergeeft voordat een "
 "account verloopt, afhankelijk van de rol."
@@ -28340,7 +28340,7 @@ msgstr ""
 "gebruiken, kunt u hier het script (vanaf de documentroot) definiëren waar "
 "gebruikers naartoe worden omgeleid wanneer ze proberen de index te laden."
 
-msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it."
+msgid "Some features of Chamilo will connect to the exterior from the server. For example to make sure an external content exists when creating a link or showing an embedded page in the learning path. If your Chamilo server uses a proxy to get out of its network, this would be the place to configure it.<br><pre> [ 'stream_context_create' => [ 'http' => [ 'proxy' => 'tcp://example.com:8080', 'request_fulluri' => true ] ], 'curl_setopt_array' => [ 'CURLOPT_PROXY' => 'http://example.com', 'CURLOPT_PROXYPORT' => '8080' ] ] </pre>"
 msgstr ""
 "Sommige functies van Chamilo maken verbinding met de buitenwereld vanaf de "
 "server. Bijvoorbeeld om te controleren of externe inhoud bestaat bij het "
@@ -28575,7 +28575,7 @@ msgstr ""
 "Schakel dit in om leerlingen toe te staan de leerpaden als SCORM-pakketten "
 "te downloaden."
 
-msgid "Array defining host and port for the LDAP server."
+msgid "Array defining host and port for the LDAP server.<br><pre> ['host' => '', 'port' => ''] </pre>"
 msgstr "Array die host en poort voor de LDAP-server definieert."
 
 msgid "Array of relationships between user extra fields and session extra fields, so the session can be pre-filled with data matching the user's data."
@@ -28587,7 +28587,7 @@ msgstr ""
 msgid "Enable edition of course work time"
 msgstr "Inschakelen bewerken van cursus werktijd"
 
-msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500]."
+msgid "Set the options you want to appear in the navigation around a table to show less or more rows on one page. e.g. [50, 100, 200, 500].<br><pre> ['options' => [50, 100, 200, 500]] </pre>"
 msgstr ""
 "Stel de opties in die u wilt weergeven in de navigatie rond een tabel om "
 "minder of meer rijen op één pagina te tonen. Bijv. [50, 100, 200, 500]."
@@ -28826,7 +28826,7 @@ msgstr "Beveiligingsbeleid voor verwijzers"
 msgid "Enable X-sendfile headers"
 msgstr "Activeer X-sendfile-headers"
 
-msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video."
+msgid "Array of extra features you can enable for the video player in Chamilo. Options include 'speed', which allows you to change the playback speed of a video.<br><pre> ['features' => ['speed']] </pre>"
 msgstr ""
 "Reeks van extra functies die u kunt inschakelen voor de videospeler in "
 "Chamilo. Opties zijn onder andere 'snelheid', waarmee u de afspeelsnelheid "
@@ -28885,7 +28885,7 @@ msgstr ""
 "Voeg zichtbaarheidsinformatie toe voor leerpaden op de volgpagina voor "
 "cursisten"
 
-msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in."
+msgid "Array defining the 'days' and 'months' to set the account expiration date when the user first logs in.<br><pre> [ 'days' => 0, 'months' => 0, ] </pre>"
 msgstr ""
 "Array die de 'dagen' en 'maanden' definieert om de vervaldatum van het "
 "account in te stellen wanneer de gebruiker voor het eerst inlogt."
