--- a/translations/messages.pt_BR.po
+++ b/translations/messages.pt_BR.po
@@ -5817,7 +5817,7 @@ msgstr "Registros múltiplos"
 msgid "Full-text search feature"
 msgstr "Funcionalidade de pesquisa de texto completo"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Selecione \"Sim\" para ativar esta funcionalidade. Esta aplicação depende da extensão Xapian para PHP, de modo que não funcionará se esta extensão não está instalada no seu servidor, como mínimo a versão 1.x"
 
 msgid "Find a training session"
@@ -19374,31 +19374,31 @@ msgstr "Primeiro, deve criar uma aplicação Facebook (ver <a href=\"https://dev
 msgid "Announcement for a group"
 msgstr "Anúncio para um grupo"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Prioridade de idioma 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Prioridade de idioma 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Prioridade de idioma 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Prioridade de idioma 4"
 
 msgid "Language priority 5"
 msgstr "Prioridade de idioma 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "O idioma com a prioridade mais alta"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "A segunda prioridade de idioma"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "A terceira prioridade de idioma"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "A quarta prioridade de idioma"
 
 msgid "The lowest language priority"
@@ -20049,7 +20049,7 @@ msgstr "Ative essa opção para adicionar um indicador visual de força da senha
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr "Habilitar um CAPTCHA no formulário de login para evitar martelar senha"
 
 msgid "CAPTCHA mistakes allowance"
@@ -20124,7 +20124,7 @@ msgstr "Número padrão de dias que um professor pode acessar sua sessão após 
 msgid "PDF header logo"
 msgstr "Logotipo do cabeçalho PDF"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 msgstr "Se deseja usar a imagem em css/temas/[seu-css]/images/pdf_logo_header.png como o logotipo do cabeçalho PDF para todas as exportações PDF (em vez de o logotipo normais portal)"
 
 msgid "Order users by official code"
@@ -21075,7 +21075,7 @@ msgstr "Enviar Push Notificações pelo Google Cloud Mensagens"
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr "Número do projeto de Google Developer Console"
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr "Você precisa registrar um projeto no Google Developer Console"
 
 msgid "Server key of Firebase Console for Cloud Messaging"
