--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -5817,7 +5817,7 @@ msgstr "Viacnásobná registrácia"
 msgid "Full-text search feature"
 msgstr "Funkcia vyhľadávania v celom texte"
 
-msgid "Select \"Yes\" to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
+msgid "Select 'Yes' to enable this feature. It is highly dependent on the Xapian extension for PHP, so this will not work if this extension is not installed on your server, in version 1.x at minimum."
 msgstr "Zvoľte \"Áno\", pre povolenie tejto funkcie. Je silno závislé na Xapian rozšírení pre PHP, takže nebude fungovať, pokiaľ toto rozšírenie nebude nainštalované na vašom serveri, minimálne vo verzii 1.x."
 
 msgid "Find a training session"
@@ -19374,31 +19374,31 @@ msgstr "<p>Po prvé, budete musieť vytvoriť Facebook aplikáciu (pozrite <a hr
 msgid "Announcement for a group"
 msgstr "Oznámenie pre skupinu"
 
-msgid "Language priority 1"
+msgid "Highest priority language"
 msgstr "Jazyková priorita 1"
 
-msgid "Language priority 2"
+msgid "Secondary priority language"
 msgstr "Jazyková priorita 2"
 
-msgid "Language priority 3"
+msgid "Third priority language"
 msgstr "Jazyková priorita 3"
 
-msgid "Language priority 4"
+msgid "Fourth priority language"
 msgstr "Jazyková priorita 4"
 
 msgid "Language priority 5"
 msgstr "Jazyková priorita 5"
 
-msgid "The language with the highest priority"
+msgid "Primary language selected when multiple language contexts are set."
 msgstr "Jazyk s najvyššou prioritou"
 
-msgid "The second language priority"
+msgid "Secondary fallback language if first priority is unavailable or out of context."
 msgstr "Priorita druhého jazyka"
 
-msgid "The third language priority"
+msgid "Tertiary language fallback if higher priorities fail."
 msgstr "Priorita tretieho jazyka"
 
-msgid "The fourth language priority"
+msgid "Last language fallback option by order of priority."
 msgstr "Priorita štvrtého jazyka"
 
 msgid "The lowest language priority"
@@ -20049,7 +20049,7 @@ msgstr ""
 msgid "CAPTCHA"
 msgstr "CAPTCHA"
 
-msgid "Enable a CAPTCHA on the login form to avoid password hammering"
+msgid "Enable a CAPTCHA on the login form, inscription form and lost password form to avoid password hammering"
 msgstr ""
 
 msgid "CAPTCHA mistakes allowance"
@@ -20124,7 +20124,7 @@ msgstr ""
 msgid "PDF header logo"
 msgstr "Logo v hlavičke PDF"
 
-msgid "Whether to use the image at css/themes/[your-css]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
+msgid "Whether to use the image at var/themes/[your-theme]/images/pdf_logo_header.png as the PDF header logo for all PDF exports (instead of the normal portal logo)"
 msgstr ""
 
 msgid "Order users by official code"
@@ -21075,7 +21075,7 @@ msgstr ""
 msgid "Sender ID of Firebase Console for Cloud Messaging"
 msgstr ""
 
-msgid "You need register a project on <a href=\"https://console.firebase.google.com/\">Google Firebase Console</a>"
+msgid "You need register a project on <a href='https://console.firebase.google.com/'>Google Firebase Console</a>"
 msgstr ""
 
 msgid "Server key of Firebase Console for Cloud Messaging"
